feat: Adicionando implementação de barramento de eventos com registro de ouvintes baseado em prioridade e ouvintes de disparo único; incluindo testes abrangentes de funcionalidade e concorrência.
Co-authored-by: Copilot <copilot@github.com>