@@ -1,8 +1,11 @@
 package com.orbit.lib.core;
 
 import com.orbit.lib.api.EventListener;
+import com.orbit.lib.api.Priority;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
@@ -22,39 +25,88 @@ import java.util.concurrent.CopyOnWriteArrayList;
  */
 final class ListenerRegistry {
 
-    private final ConcurrentHashMap<Class<?>, CopyOnWriteArrayList<EventListener<?>>> store =
+    private final ConcurrentHashMap<Class<?>, CopyOnWriteArrayList<PrioritizedListener<?>>> store =
             new ConcurrentHashMap<>();
 
     /**
-     * Registers a listener for the given event type.
+     * Registers a listener for the given event type with {@link Priority#NORMAL}.
      *
      * @param eventType the class token for the event; must not be {@code null}
      * @param listener  the handler to register; must not be {@code null}
      * @throws NullPointerException if either argument is {@code null}
      */
     void register(Class<?> eventType, EventListener<?> listener) {
-        Objects.requireNonNull(eventType, "eventType must not be null");
-        Objects.requireNonNull(listener, "listener must not be null");
-        store.computeIfAbsent(eventType, k -> new CopyOnWriteArrayList<>()).add(listener);
+        register(eventType, listener, Priority.NORMAL);
     }
 
     /**
-     * Returns a snapshot of all listeners registered for the given event type.
+     * Registers a listener for the given event type with an explicit priority.
      *
-     * <p>The returned list is a point-in-time copy — modifications to the
-     * registry after this call are not reflected in the returned list.
+     * @param eventType the class token for the event; must not be {@code null}
+     * @param listener  the handler to register; must not be {@code null}
+     * @param priority  the execution priority; must not be {@code null}
+     * @throws NullPointerException if any argument is {@code null}
+     */
+    void register(Class<?> eventType, EventListener<?> listener, Priority priority) {
+        Objects.requireNonNull(eventType, "eventType must not be null");
+        Objects.requireNonNull(listener, "listener must not be null");
+        Objects.requireNonNull(priority, "priority must not be null");
+        store.computeIfAbsent(eventType, k -> new CopyOnWriteArrayList<>())
+                .add(new PrioritizedListener<>(priority, listener));
+    }
+
+    /**
+     * Removes one registration of the given listener for the given event type.
+     *
+     * <p>The match is made against the wrapped delegate — the original listener
+     * instance passed to {@link #register} — regardless of its priority.
+     * If the listener is registered multiple times, only the first matching
+     * entry is removed. If the listener is not registered, this method does
+     * nothing (idempotent).
+     *
+     * @param eventType the class token for the event; must not be {@code null}
+     * @param listener  the handler to remove; must not be {@code null}
+     * @throws NullPointerException if either argument is {@code null}
+     */
+    void deregister(Class<?> eventType, EventListener<?> listener) {
+        Objects.requireNonNull(eventType, "eventType must not be null");
+        Objects.requireNonNull(listener, "listener must not be null");
+        CopyOnWriteArrayList<PrioritizedListener<?>> listeners = store.get(eventType);
+        if (listeners == null) {
+            return;
+        }
+        for (PrioritizedListener<?> pl : listeners) {
+            if (pl.delegate().equals(listener)) {
+                listeners.remove(pl);
+                return;
+            }
+        }
+    }
+
+    /**
+     * Returns a priority-sorted snapshot of all listeners for the given event type.
+     *
+     * <p>Listeners are ordered by {@link Priority} (HIGH first, LOW last). Within
+     * the same priority, insertion order (FIFO) is preserved. The returned list
+     * is a point-in-time copy — modifications after this call are not reflected.
      *
      * @param eventType the class token; must not be {@code null}
-     * @return an unmodifiable snapshot, never {@code null}, may be empty
+     * @return an unmodifiable, priority-ordered snapshot; never {@code null}
      * @throws NullPointerException if {@code eventType} is {@code null}
      */
     List<EventListener<?>> getListeners(Class<?> eventType) {
         Objects.requireNonNull(eventType, "eventType must not be null");
-        CopyOnWriteArrayList<EventListener<?>> listeners = store.get(eventType);
+        CopyOnWriteArrayList<PrioritizedListener<?>> listeners = store.get(eventType);
         if (listeners == null) {
             return Collections.emptyList();
         }
-        return List.copyOf(listeners);
+        List<PrioritizedListener<?>> sorted = new ArrayList<>(listeners);
+        sorted.sort(Comparator.comparingInt(pl -> pl.priority().ordinal()));
+        List<EventListener<?>> result = new ArrayList<>(sorted.size());
+        for (PrioritizedListener<?> pl : sorted) {
+            result.add(pl);
+        }
+        return Collections.unmodifiableList(result);
     }
 
     /**
@@ -66,7 +118,7 @@ final class ListenerRegistry {
      */
     int count(Class<?> eventType) {
         Objects.requireNonNull(eventType, "eventType must not be null");
-        CopyOnWriteArrayList<EventListener<?>> listeners = store.get(eventType);
+        CopyOnWriteArrayList<PrioritizedListener<?>> listeners = store.get(eventType);
         return listeners == null ? 0 : listeners.size();
     }
 }
